code_grpc/kubernetes/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client
  namespace: app-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
        - name: grpc-client
          image: $ECR_CLIENT_REPOSITORY:latest
          imagePullPolicy: Always
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-client
  namespace: app-grpc
spec:
  selector:
    app: grpc-client
  ports: []
  type: ClusterIP
