code_grpc/kubernetes/server-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-grpc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server
  namespace: app-grpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpc-server
  template:
    metadata:
      labels:
        app: grpc-server
    spec:
      containers:
        - name: grpc-demo
          image: ${ECR_SERVER_REPOSITORY}:latest
          imagePullPolicy: Always
          ports:
            - name: grpc-api
              containerPort: 9000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server
  namespace: app-grpc
spec:
  # bypass kube-proxy
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  clusterIP: None
  selector:
    app: grpc-server
